--- a/trunk/components/com_flexicontent/assets/css/flexicontent.css
+++ b/trunk/components/com_flexicontent/assets/css/flexicontent.css
@@ -1,29 +1,51 @@
-div#flexicontent
-{ /*overflow: hidden;*/ /* clearing in beez */ }
+/* FLEXIcontent base CSS */
 
-div#flexicontent .clear
-{ border: 0; clear: both; float: none; font-size: 1px; height: 0; line-height: 1px; margin: 0; padding: 0; visibility: hidden;}
+div#flexicontent {
+}
 
-div#flexicontent .floattext:after /* ie fix in coditional comments (html source) */
-{content: "."; display: block; height: 0; clear: both; visibility: hidden;}
+div#flexicontent .clear {
+	border: 0;
+	clear: both;
+	float: none;
+	font-size: 1px;
+	height: 0;
+	line-height: 1px;
+	margin: 0;
+	padding: 0;
+	visibility: hidden;
+}
 
-div#flexicontent .floattext
-{ display:block; margin: 0 0 0.5em; /* safari */ }
+div#flexicontent .floattext:after { /* ie fix in conditional comments (html source) */
+	clear: both;
+	content: ".";
+	display: block;
+	height: 0;
+	visibility: hidden;
+}
+
+div#flexicontent .floattext {
+	display: block;
+	margin: 0 0 0.5em; /* safari */
+}
 
 /**
  * @section buttons
  *
  * print, pdf, ...
  */
-div#flexicontent .buttons
-{ float: right; }
+div#flexicontent .buttons {
+	float: right;
+}
 
-div#flexicontent .buttons img
-{ border: none; }
+div#flexicontent .buttons img {
+	border: none;
+}
 
-div#flexicontent .buttons a
-{ padding: 0 0 0 5px; height: 16px; line-height: 16px; }
-
+div#flexicontent .buttons a {
+	height: 16px;
+	line-height: 16px;
+	padding: 0 0 0 5px;
+}
 
 /**
  * @section headlines
@@ -45,51 +67,55 @@ h2.flexicontent {
  * see http://www.cssplay.co.uk/menus/centered.html
  */
 div.pagination {
+	float: left;
+	left: 50%;
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
-	float: left;
-	left: 50%;
 }
+
 div.pagination div.tab,
 div.pagination div.page-block {
 	position: relative;
 	right: 50%;
 }
+
 div.pageslinks {
-	overflow: hidden;
 	clear: both;
 	float: left;
+	overflow: hidden;
 	width: 100%;
 }
+
 div#flexicontent .pagescounter {
 	text-align: center;
 }
-
 
 /**
  * @section Categoryview
  *
  */
 div#flexicontent .catimg {
-margin: 0 0.5em 0.5em 0;
-float: left;
-position: relative;
+	float: left;
+	margin: 0 0.5em 0.5em 0;
+	position: relative;
 }
 
 div#flexicontent .catimg p {
-font-size: 0.9em; line-height: 180%;
-margin: 0 0 0.5em 0;
+	font-size: 0.9em;
+	line-height: 180%;
+	margin: 0 0 0.5em 0;
 }
 
 div#flexicontent .catdescription {
-margin: 0 0 0.5em 0;
+	margin: 0 0 0.5em 0;
 }
 
 div#flexicontent .subcategories {
-/* font-size: 1.2em; font-weight: bold; */
-border-bottom: 2px solid #ddd;
-padding:0.5em 0.3em; margin: 0.8em 0;
+	border-bottom: 2px solid #dddddd;
+	/* font-size: 1.2em; font-weight: bold; */
+	margin: 0.8em 0;
+	padding: 0.5em 0.3em;
 }
 
 /**
@@ -97,179 +123,165 @@ padding:0.5em 0.3em; margin: 0.8em 0;
  *
  */
 div#flexicontent .taglist {
-margin: 5px 0 10px; padding: 0 5px;
+	margin: 5px 0 10px;
+	padding: 0 5px;
 }
-
 
 /**
  * @section FLEXIcontent Table
  *
  */
-div#flexicontent table.flexitable
-{ margin: 1em 1px; width: 99%; font-size: 1em; border-collapse: collapse; border: 1px solid #E5E5E5; clear: both; }
+div#flexicontent table.flexitable {
+	border: 1px solid #e5e5e5;
+	border-collapse: collapse;
+	clear: both;
+	font-size: 1em;
+	margin: 1em 1px;
+	width: 99%;
+}
 
-div#flexicontent table.flexitable th
-{ background-color: #EFEFEF; color: #000; font-weight: bold; padding: 0.4em; text-align: left; border-bottom: 1px solid #e5e5e5; border-right: 1px solid #E5E5E5;  }
+div#flexicontent table.flexitable th {
+	background-color: #efefef;
+	border-bottom: 1px solid #e5e5e5;
+	border-right: 1px solid #e5e5e5;
+	color: #000000;
+	font-weight: bold;
+	padding: 0.4em;
+	text-align: left;
+}
 
-div#flexicontent table.flexitable th.table-titles
-{ background-color: inherit; font-weight: normal; }
+div#flexicontent table.flexitable th.table-titles {
+	background-color: inherit;
+	font-weight: normal;
+}
 
-div#flexicontent table.flexitable th img
-{ margin: 0 0 5px 5px; vertical-align: middle; border: none; }
+div#flexicontent table.flexitable th img {
+	border: none;
+	margin: 0 0 5px 5px;
+	vertical-align: middle;
+}
 
-div#flexicontent table.flexitable td
-{ padding: 0.4em; border-bottom: 1px solid #e5e5e5; border-right: 1px solid #E5E5E5; vertical-align: top; }
+div#flexicontent table.flexitable td {
+	border-bottom: 1px solid #e5e5e5;
+	border-right: 1px solid #e5e5e5;
+	padding: 0.4em;
+	vertical-align: top;
+}
 
-div#flexicontent table.flexitable tr.sectiontableentry2 td
-{ background: #F4F4F4; }
+div#flexicontent table.flexitable tr.sectiontableentry2 td {
+	background: #f4f4f4;
+}
 
-div#flexicontent table.flexitable tr:hover td, div#flexicontent table.flexitable tr:hover th
-{ background: #F8F8F8 }
-
+div#flexicontent table.flexitable tr:hover td, 
+div#flexicontent table.flexitable tr:hover th {
+	background: #f8f8f8;
+}
 
 /**
  * @section flexicontent Table Filter Form
  *
  */
 div.subcategorieslist {
-margin: 0 0 1em 0;
+	margin: 0 0 1em 0;
 }
 
 div#fc_alpha {
-margin: 0 0 1em 0;
+	margin: 0 0 1em 0;
 }
 
 div#flexicontent #fc_filter {
-margin: 0 0 1em 0; padding: 0.5em;
-border: solid 1px #ddd;
+	border: solid 1px #dddddd;
+	margin: 0 0 1em 0;
+	padding: 0.5em;
 }
 
 div#flexicontent .fc_fleft {
-float: left;
+	float: left;
 }
 
 div#flexicontent .fc_fright {
-float: right;
+	float: right;
 }
+
 div#flexicontent .fc_fright .filter {
-margin-left: 10px;
+	margin-left: 10px;
 }
 
 /**
  * @section Edit Form
  *
  */
-
-/* Form elements */
-div.flexi_edit form input,
-div.flexi_edit form button,
-div.flexi_edit form select,
-div.flexi_edit form textarea {
-	margin: 0 0 0.5em 0;
-	padding: 0.2em;
-	border: 1px solid #ddd;
-	cursor: pointer;
-	background-color: #fff;
-}
-div.flexi_edit form input.invalid,
-div.flexi_edit form select.invalid,
-div.flexi_edit form textarea.invalid {
-	border: 1px dotted red;
-}
-    
-.flexi_edit form label {
-	width: 9em;
-	margin: 0;
-	padding: 0;
-	float: left;
-	display: block;
-	vertical-align: top;
-}
-
-/* Tags */
-div#tags {
-	margin: 3px;
-}
-div#tags input {margin-right: 0.5em;}
-
-div#tags ul {
-	margin: 3px;
-	padding: 0px;
-}
-
-div#tags ul li {
-	width: 110px;
-	min-height: 20px;
-	display: -moz-inline-stack;
-	display: inline-block;
-	vertical-align: top;
-	margin: 2px;
-	zoom: 1;
-	*display: inline;
-	_height: 20px;
-}
-
-div#tags ul li div {
-	padding-top: 3px;
-}
-
-div#tags .flexi_tagbox {
-	display: block;
-	max-height: 170px;
-  	overflow: auto;
-  	border: 1px dashed silver;
-  	background: #fff;	
-}
-
-
-/* Fieldsets */
-.flexi_edit form fieldset {
+div.qf_edit form fieldset {
+	border: 1px solid #dddddd;
 	margin: 0 0 1em 0;
 	padding: 1em;
-	border: 1px solid #ddd;
 }
-.flexi_general {}
-.flexi_tags {}
-.flexi_fields {}
-.flexi_meta {}
 
-/* Buttons */
-.flexi_buttons {
-	margin: 0 0 1em 0;
-	float: right;
+div.qf_edit form legend {
+	font-weight: bold;
+	padding: 0.3em;
 }
-.flexi_buttons button {
+
+div.qf_edit form label {
+	display: block;
+	float: left;
+	margin: 0;
+	padding: 0;
+	vertical-align: top;
+	width: 9em;
+}
+
+div.qf_edit form input,
+div.qf_edit form button,
+div.qf_edit form select,
+div.qf_edit form textarea {
+	background-color: #ffffff;
+	border: 1px solid #dddddd;
 	cursor: pointer;
+	margin: 0 0 0.5em 0;
+	padding: 0.2em;
 }
 
-/* Meta */  
-div.flexi_box_left {
-width: 47%;
-float: left;
+/* save buttons */
+div.qf_save_buttons {
+	float: right;
+	margin: 0 0 1em 0;
 }
-div.flexi_box_right {
-width: 47%;
-float: right;
+
+div.qf_save_buttons button {
+	cursor: pointer;
+	font-size: 1.5em;
+}
+
+div.qf_box_left,
+div.qf_box_right {
+	float: left;
+	width: 45%;
+}
+
+div.qf_box_right {
+	float: right;
 }
 
 /** rating bar **/
 div#flexicontent .qf_ratingbarcontainer {
 	border: 1px solid #999999;
+	display: block;
 	height: 10px;
-	width: 60px;
 	margin: 2px 2px;
-	display: block;
-}
-div#flexicontent .qf_ratingbar {
-	background-color: silver;
-	height: 10px;
-	display: block;
+	width: 60px;
 }
 
-/** state toggler */
-.qf_statetoggler{ 
-	padding: 0;
+div#flexicontent .qf_ratingbar {
+	background-color: #c0c0c0;
+	display: block;
+	height: 10px;
+}
+
+/* state toggler */
+.qf_statetoggler{
 	list-style: none;
+	padding: 0;
 	width: 10px;
 }
 
@@ -278,37 +290,38 @@ div#flexicontent .qf_ratingbar {
 }
 
 .statetoggler li ul li {
-	border: #ddd 1px solid;
 	background-color: #ffffff;
+	border: #dddddd 1px solid;
 	color: #000000;
+	list-style: none;
 	padding: 2px;
-	list-style:none;
 }
+
 
 /* DIRECTORY VIEW */
 div#flexicontent.directory .floattext h2 {
-	background-color:#DDDDDD;
-	border-bottom:0 none;
-	border-left:1px solid #FFFFFF;
-	border-right:1px solid #FFFFFF;
-	color:#FFFFFF;
-	margin:-3px 0 0;
-	padding:1px 0;
+	background-color: #dddddd;
+	border-bottom: 0 none;
+	border-left: 1px solid #ffffff;
+	border-right: 1px solid #ffffff;
+	color: #ffffff;
+	margin: -3px 0 0;
+	padding: 1px 0;
 	width: auto;
 }
 
 div#flexicontent.directory .floattext h2 a {
-	border:2px solid #DDDDDD;
-	display:block;
-	margin:0 -1px;
-	padding:2px 0 1px 4px;
-	position:relative;
+	border: 2px solid #dddddd;
+	display: block;
+	margin: 0 -1px;
+	padding: 2px 0 1px 4px;
+	position: relative;
 }
 
 div#flexicontent.directory .floattext ul {
+	list-style: none;
 	margin: 3px 0 7px;
 	padding: 0 7px;
-	list-style: none;
 }
 
 div#flexicontent.directory .column {
@@ -316,17 +329,19 @@ div#flexicontent.directory .column {
 	margin-right: 5px;
 }
 
-
 /* Favourites */
 .fav-block {
 	clear: both;
 }
+
 .fav-block img {
 	vertical-align: middle;
 }
+
 .favlink {
 	outline: none;
 }
+
 .fcfav img {
 }
 
@@ -336,20 +351,25 @@ div#flexicontent.directory .column {
 div.comments {
 	margin-top: 15px;
 }
+
 .comments #jc h4 {
-	font-weight: normal;
 	color: inherit;
+	font-weight: normal;
 	margin-top: 0px;
 }
+
 .comments #comments a {
 	color: inherit;
 }
+
 .comments #comments a:hover {
-	color: #578E13;
+	color: #578e13;
 }
+
 .comments #comments div.comments-list {
 	margin-left: 0;
 }
+
 .comments .rbox_tr,
 .comments .rbox_tl,
 .comments .rbox_t,
@@ -362,28 +382,46 @@ div.comments {
 }
 
 .comments .rbox {
-	border: 1px #ccc solid;
+	border: 1px #cccccc solid;
 }
+
 .comments .even .rbox {
-	background: #fff;
+	background: #ffffff;
 }
+
 .comments .odd .rbox {
 	background: #f0f0f0;
 }
+
 .comments #comments-list-footer {
 	margin: 0 0 10px 0;
 }
-#comments-form p, #comments-form #comments-form-buttons, #comments-form #comments-form-error {
+
+#comments-form p, 
+#comments-form #comments-form-buttons, 
+#comments-form #comments-form-error {
 	margin-left: 0px !important;
 }
-#comments-form #comments-form-message, #comments-inline-edit #comments-form-message {padding: 5px 5px 5px 25px;display: block;}
-.comments-form-message-error {background: #FFD86F url(../images/error.png) no-repeat 4px 50%;}
-.comments-form-message-info {background: #DFEEFF url(../images/information.png) no-repeat 4px 50%;}
+
+#comments-form #comments-form-message, 
+#comments-inline-edit #comments-form-message {
+	display: block;
+	padding: 5px 5px 5px 25px;
+}
+
+.comments-form-message-error {
+	background: url(../images/error.png) #ffd86f no-repeat 4px 50%;
+}
+
+.comments-form-message-info {
+	background: url(../images/information.png) #dfeeff no-repeat 4px 50%;
+}
 
 /* Tab comments */
 .comments .votes {
 	margin-left: -4px;
 }
+
 .comments .favs {
 	margin: 5px 0 15px;
 }
@@ -399,79 +437,82 @@ dl.tabs {
 }
 
 dl.tabs dt {
-	float: left;
-	padding: 4px 10px;
-	border-left: 1px solid #ccc;
-	border-right: 1px solid #ccc;
-	border-top: 1px solid #ccc;
-	margin-left: 3px;
 	background: #f0f0f0;
-	color: #666;
+	border-left: 1px solid #cccccc;
+	border-right: 1px solid #cccccc;
+	border-top: 1px solid #cccccc;
+	color: #666666;
+	float: left;
+	margin-left: 3px;
+	padding: 4px 10px;
 }
 
 dl.tabs dt.open {
-	background: #F9F9F9;
-	border-bottom: 1px solid #F9F9F9;
+	background: #f9f9f9;
+	border-bottom: 1px solid #f9f9f9;
+	color: #000000;
 	z-index: 100;
-	color: #000;
 }
 
 div.current {
+	border: 1px solid #cccccc;
 	clear: both;
-	border: 1px solid #ccc;
 	padding: 10px 10px;
 }
 
 div.current dd {
-	padding: 0;
 	margin: 0;
+	padding: 0;
 }
 
 #bottom-block {
-	width: 373px;
 	margin: 0 auto;
+	width: 373px;
 }
 
-/**
- * Alphabetical index
- */
+/* Alpha Index */
 #fc_alpha {
 	clear: both;
 	float: left;
 	overflow: hidden;
 	width: 100%;
 }
+
 #fc_alpha .letters {
+	float: left;
+	left: 50%;
 	margin-bottom: 5px;
 	margin-left: auto;
 	margin-right: auto;
-	float: left;
-	left: 50%;
 	position: relative;
-}
-#fc_alpha .numbers {
-	margin-bottom: 5px;
-	margin-left: auto;
-	margin-right: auto;
-	float: left;
-	left: 50%;
-	position: relative;
-	clear: both
-}
-.fc_alpha_index {
-	padding: 1px 2px;
-	border: 1px solid silver;
-	background: #efefef;
-	text-decoration: none;
-	margin-right: 2px;
-	float: left;
-	position: relative;
-	right: 50%;
-}
-span.fc_alpha_index {
-	color: silver;
 }
 
+#fc_alpha .numbers {
+	clear: both;
+	float: left;
+	left: 50%;
+	margin-bottom: 5px;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+}
+
+.fc_alpha_index {
+	background: #efefef;
+	border: 1px solid #c0c0c0;
+	float: left;
+	margin-right: 2px;
+	padding: 1px 2px;
+	position: relative;
+	right: 50%;
+	text-decoration: none;
+}
+
+span.fc_alpha_index {
+	color: #c0c0c0;
+}
+
+/* File Field Plugin */
 .icon-mime {
 	vertical-align: middle;
 }
