--- a/trunk/administrator/components/com_flexicontent/assets/css/Pager.css
+++ b/trunk/administrator/components/com_flexicontent/assets/css/Pager.css
@@ -23,13 +23,13 @@
 }
 
 #pager ul.pages li.pgEmpty {
-	border:1px solid #eee;
-	color:#eee;
+	border:1px solid #ddd;
+	color:#ddd;
 }
 
 #pager ul.pages li.pgCurrent {
 	border:1px solid #aaa;
-	color:#aaa;
+	color:#000;
 	font-weight:bold;
 	background-color:#eee;
 }
