^ Fixed improved previous/next item navigation field (fcpagenav) to retrieve item data with little performance impact because of item's ordering, also added item's images and category image options with phpThumb thumbnailing, TODO: field is now prepared to accept navigation information from other item listing views, e.g. author, mcats, myitems, etc plus also consider current field filtering and search !!, this is for v2.3.0 or later

--- a/site/assets/css/flexicontent.css
+++ b/site/assets/css/flexicontent.css
@@ -633,6 +633,7 @@ form > .fc_filter_line {  /* filters placed directly inside form aka outside the
 	background: url(../images/magnifier-left.png) 96% 4px no-repeat white;
 	opacity: 0.5; filter:alpha(opacity=50);
 	min-width: 120px !important;
+	vertical-align: middle;
 }
 /* enlarge field in views ... (non-module) */
 input.fc_text_filter:not(.fc_iscalendar),  input.fc_text_filter:not(.fc_iscalendar):focus,
