--- a/site/assets/css/flexi_form.css
+++ b/site/assets/css/flexi_form.css
@@ -81,7 +81,7 @@ input[type=radio   ].fc_checkradio:not(old) + label:not(.plupload_button):not(.b
 	line-height: 22px !important;
 	height: 22px !important;
 	text-align: left !important;
-	min-width: 12px !important;
+	min-width: 1px !important;
 	cursor: pointer !important;
 	color: #333;
 	/*margin-left: -19px !important;
@@ -173,6 +173,7 @@ li.fc_checkradio_option {
 	display: inline-block; /* auto-hide do not force display */
 	margin-top: 1px !important;
 	margin-bottom: 1px !important;
+	vertical-align:top;
 }
 
 
