--- a/site/assets/css/flexicontent.css
+++ b/site/assets/css/flexicontent.css
@@ -528,7 +528,7 @@ form > .fc_filter_line {  /* filters placed directly inside form aka outside the
 	vertical-align: baseline;
 	white-space: nowrap;
 	border-radius: 4px;
-	margin: 0px 2px 2px 4px !important;
+	margin: 2px 2px 2px 4px !important;
 }
 .fc_filter .fc_filter_label_inline,
 .fc_filter_line .fc_filter_label_inline {
@@ -645,11 +645,12 @@ input.fc_field_filter.fc_iscalendar {
 	min-width: 60px !important;
 }
 
-label.fc_filter_val { }
+label.fc_filter_val.fc_cleared { display:inline-block; float:left !important; clear:both; }
 .fc_filter_val_lbl { }
-.fc_filter_val_img:after { content: '\A'; white-space: pre; }
+.fc_filter_val_img { display:inline-block; float:left !important; }
+/*.fc_filter_val_img:after { content: '\A'; white-space: pre; }*/
 .fc_filter_val_img > img { margin:2px 12px 2px 4px; vertical-align:top; }
-label.fc_filter_val + .fc_filter_val_img > img { margin-left:-24px; }
+label.fc_filter_val + .fc_filter_val_img > img { margin: 4px 12px 2px -8px; }
 
 
 form.fc_instant_filter { display: block; margin: 0px !important; padding: 0px !important; position: relative !important; }
